hide cardImg class on load rather than loading visible then immediately toggling via showHide() function (fixes img flash on page load)

--- a/assignment/3_memory-game/styles.css
+++ b/assignment/3_memory-game/styles.css
@@ -12,6 +12,10 @@ body {
   float: left;
 }
 
+.cardImg {
+  display: none;
+}
+
 img {
   width: 150px;
   height: 150px;
